--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function ready(error, us) {
 
 // Load data sources
 d3.queue()
-	.defer(d3.json, 'data/us/us.json')
+	.defer(d3.json, 'data/us.json')
 	.await(ready);
 
 
